# PlayWithPocoMultiCast

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: mcastSendReceive.cpp
